--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "engines": {
+      "node": "14.16.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mangomateo/techdegree-project-6.git"
